--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<form>
-<div class="wrapper">
-  <input type="checkbox" id="ck1" onClick="check()"/>
-  <label for="ck1">Eu</label>
-  <input type="checkbox" id="ck2" onClick="check()"/>
-  <label for="ck2">te</label>
-  <input type="checkbox" id="ck3" onClick="check()"/>
-  <label for="ck3">amo</label>
-  <span>(Click on words)</span>
-</div>
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>❤️</title>
+    <link rel="stylesheet" type="text/css" href="INDEX.css">
+</head>
+<body>
+    <form>
+        <div class="wrapper">
+          <input type="checkbox" id="ck1" onClick="check()"/>
+          <label for="ck1">Eu</label>
+          <input type="checkbox" id="ck2" onClick="check()"/>
+          <label for="ck2">te</label>
+          <input type="checkbox" id="ck3" onClick="check()"/>
+          <label for="ck3">amo</label>
+          <span>(Click on words)</span>
+        </div>
+    </form>
+
+    <script src="index.js"></script>
+</body>
+</html>
