--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <label for="ck2">te</label>
           <input type="checkbox" id="ck3" onClick="check()"/>
           <label for="ck3">amo</label>
-          <span>(clique nas palavras)</span>
+          <span style="text-align: center; width: 100%;">(clique nas palavras)</span>
         </div>
     </form>
 
